# SFML-Snake

./: .clang-format  .gitignore  meson.build  perf.data  snake
include/: Button.hpp  GameAsset.hpp  Screen.hpp  SnakeConfig.hpp  SnakeController.hpp  SnakeGameRenderer.hpp  SnakeModel.hpp
src/: Button.cpp  Screen.cpp  SnakeController.cpp  SnakeGameRenderer.cpp  SnakeModel.cpp  utility.cpp
subprojects/: sfml.wrap
